# LynMusic

./: .gitignore  README.md  app-version.xcconfig  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/workflows/: build_kmp.yml
android/runtime/: build.gradle.kts
android/runtime/src/main/: AndroidManifest.xml
android/runtime/src/main/res/xml/: lyrics_share_paths.xml
automotiveApp/: build.gradle.kts
automotiveApp/src/debug/: AndroidManifest.xml
automotiveApp/src/main/: AndroidManifest.xml
automotiveApp/src/main/kotlin/top/iwesley/lyn/music/automotive/: CrashReportActivity.kt  LynMusicApplication.kt  MainActivity.kt
buildSrc/: settings.gradle.kts
buildSrc/src/main/kotlin/: LynBuildConfig.kt
cast/api/: build.gradle.kts
cast/upnp/android/: build.gradle.kts
cast/upnp/android/src/main/: AndroidManifest.xml
cast/upnp/android/src/main/cpp/: CMakeLists.txt  lyn_upnp_cast_jni.cpp  lyn_upnp_renderer_jni.cpp
composeApp/: build.gradle.kts
composeApp/schemas/top.iwesley.lyn.music.data.db.LynMusicDatabase/: 1.json  2.json  3.json
composeApp/src/androidMain/: AndroidManifest.xml
composeApp/src/androidMain/kotlin/top/iwesley/lyn/music/: MainActivity.kt  Platform.android.kt
composeApp/src/androidMain/kotlin/top/iwesley/lyn/music/platform/: AndroidArtworkCacheStore.kt  AndroidDeviceInfoGateway.kt  AndroidLyricsShareFontLibraryPlatformService.kt  AndroidLyricsSharePlatformService.kt  AndroidPlatform.kt  AndroidSambaSupport.kt  AndroidSystemPlaybackControlsPlatformService.kt  AndroidWebDavSupport.kt  ArtworkBitmap.android.kt
composeApp/src/androidMain/res/drawable-v24/: ic_launcher_foreground.xml
composeApp/src/androidMain/res/values/: strings.xml
composeApp/src/androidMain/res/xml/: backup_rules.xml  data_extraction_rules.xml
composeApp/src/applePlaybackMain/kotlin/top/iwesley/lyn/music/platform/: AppleAudioSessionCoordinator.kt  AppleNativePlayer.kt  ApplePlaybackGateway.kt
composeApp/src/commonMain/kotlin/top/iwesley/lyn/music/: App.kt  Greeting.kt  Platform.kt
composeApp/src/commonMain/kotlin/top/iwesley/lyn/music/domain/: LyricsEngine.kt  NavidromeEngine.kt  NavidromeHash.kt  WorkflowLyricsEngine.kt
composeApp/src/commonMain/kotlin/top/iwesley/lyn/music/platform/: ArtworkBitmap.kt  ArtworkCacheSupport.kt  PlaybackGatewayStateReset.kt  SambaPlaybackSupport.kt  WebDavSupport.kt
composeApp/src/commonMain/kotlin/top/iwesley/lyn/music/ui/: LynMusicTheme.kt
composeApp/src/commonTest/kotlin/top/iwesley/lyn/music/: AndroidSambaPlaybackSupportTest.kt  AppleMediaLocatorResolverTest.kt  ArtworkCacheSupportTest.kt  ArtworkLocatorNormalizerTest.kt  ComposeAppCommonTest.kt  LyricsEngineTest.kt  LyricsSearchUiModesTest.kt  PlayerStoreManualLyricsSearchTest.kt  SambaPathTest.kt  WebDavTest.kt  WorkflowLyricsEngineTest.kt
composeApp/src/iosMain/kotlin/top/iwesley/lyn/music/: MainViewController.kt  Platform.ios.kt
composeApp/src/iosMain/kotlin/top/iwesley/lyn/music/platform/: AppleAudioSessionCoordinator.ios.kt  IosAppStorageGateway.kt  IosArtworkCacheStore.kt  IosLyricsSharePlatformService.kt  IosPlatform.kt  IosSystemPlaybackControlsPlatformService.kt
composeApp/src/jvmMain/kotlin/top/iwesley/lyn/music/: Platform.jvm.kt  main.kt
composeApp/src/jvmMain/kotlin/top/iwesley/lyn/music/platform/: ArtworkBitmap.jvm.kt  JvmAppStorageGateway.kt  JvmArtworkCacheStore.kt  JvmAudioTagReader.kt  JvmLyricsShareFontLibraryPlatformService.kt  JvmLyricsSharePlatformService.kt  JvmNativeFilePicker.kt  JvmOfflineDownloadGateway.kt  JvmPlatform.kt  JvmSambaSupport.kt  JvmSameNameLyricsSupport.kt  JvmSecureCredentialStore.kt  JvmWebDavSupport.kt  VlcSupport.kt
composeApp/src/jvmMain/resources/: desktop-icon.icns
composeApp/src/jvmTest/kotlin/top/iwesley/lyn/music/: DatabaseMigrationTest.kt  DefaultLyricsRepositoryManualSearchTest.kt  DefaultLyricsRepositoryNavidromeTest.kt  DefaultLyricsRepositoryWorkflowTest.kt  JvmAppStorageGatewayTest.kt  JvmArtworkCacheStoreTest.kt  JvmDeviceInfoGatewayTest.kt  JvmLyricsShareDefaultCoverTest.kt  JvmLyricsShareFontSupportTest.kt  JvmMacOsWindowChromeTest.kt  JvmNativeFilePickerTest.kt  JvmOfflinePlaybackResolutionTest.kt  JvmPlatformMetadataTest.kt  JvmSambaSupportTest.kt  JvmSameNameLyricsSupportTest.kt  NavidromeCredentialCacheIntegrationTest.kt  NavidromeEngineTest.kt  PlaybackGatewayStateResetTest.kt  TestSecureCredentialStore.kt  VlcSupportTest.kt  WebDavSupportTest.kt
composeApp/src/macosMain/kotlin/top/iwesley/lyn/music/: Platform.macos.kt
composeApp/src/macosMain/kotlin/top/iwesley/lyn/music/platform/: AppleAudioSessionCoordinator.macos.kt  AppleNativePlayer.macos.kt  ArtworkBitmap.macos.kt  MacosPlaybackHost.kt
composeApp/src/skiaLyricsShareMain/kotlin/top/iwesley/lyn/music/platform/: SkiaArtworkDifferenceHash.kt  SkiaLyricsShareFontSupport.kt  SkiaLyricsShareRenderer.kt
gradle/: libs.versions.toml
iosApp/Configuration/: Config.xcconfig
iosApp/iosApp.xcodeproj/: project.pbxproj
macosApp/Configuration/: Config.xcconfig
macosApp/macosApp/: ContentView.swift  MacOSApp.swift
macosApp/macosApp.xcodeproj/: project.pbxproj
player/app/: build.gradle.kts
player/app/src/androidMain/kotlin/top/iwesley/lyn/music/: ArtworkImageTarget.android.kt  CoilDiskCacheDirectory.android.kt
player/app/src/commonMain/kotlin/top/iwesley/lyn/music/: App.kt  AppCommonUi.kt  AppShell.kt  ArtworkImage.kt  CoilDiskCacheDirectory.kt  ImeAwareOutlinedTextField.kt  LayoutProfile.kt  LibraryNavigation.kt  LibrarySourcesUi.kt  LyricsSearchUi.kt  MusicTagsScreen.kt  MyUi.kt  PlatformLocals.kt  PlayerLyricsDisplayFiltering.kt  PlayerLyricsShareUi.kt  PlayerUi.kt  PlaylistsUi.kt  SettingsNavigation.kt  SettingsUi.kt  StartupErrorUi.kt
player/app/src/jvmMain/kotlin/top/iwesley/lyn/music/: ArtworkImageTarget.jvm.kt  CoilDiskCacheDirectory.jvm.kt
player/core/: build.gradle.kts
shared/core/: build.gradle.kts
shared/data/schemas/top.iwesley.lyn.music.data.db.LynMusicDatabase/: 10.json  11.json  12.json  13.json  14.json  6.json  9.json
tvApp/: build.gradle.kts
tvApp/src/main/: AndroidManifest.xml
(+206 files in other folders)
